RESOLVED FIXED274003
Close a WebSocketTask if it completes with an error without closing properly
https://bugs.webkit.org/show_bug.cgi?id=274003
Summary Close a WebSocketTask if it completes with an error without closing properly
Alex Christensen
Reported 2024-05-10 09:41:45 PDT
Attachments
Alex Christensen
Comment 1 2024-05-10 09:47:45 PDT
EWS
Comment 2 2024-05-10 12:44:18 PDT
Committed 278623@main (ebe1ce92f75f): <https://commits.webkit.org/278623@main> Reviewed commits have been landed. Closing PR #28392 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.